fix: not-only dog image z-index fix

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -242,7 +242,6 @@ img {
   max-height: 728px;
   align-self: flex-end;
   margin-right: 40px;
-  z-index: 2;
 }
 
 /* about */
